--- a/package.json
+++ b/package.json
@@ -1,38 +1,76 @@
 {
-  "name": "react-cesiumext",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "@mapuiexts/react-cesiumext-test",
+    "homepage": "https://mapuiexts.github.io/react-cesiumext.github.io/en/v0.1/apidoc",
+    "version": "0.1.0",
+    "description": "A react library to build 3d map applications with cesiumjs",
+    "keywords": [
+        "maps",
+        "3d",
+        "gis",
+        "cesiumjs",
+        "react"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "author": "Paulo Aragao",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/mapuiexts/React-CesiumExt/issues"
+    },
+    "main": "dist/main.js",
+    "files": [
+        "dist",
+        "README.md"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/mapuiexts/React-CesiumExt"
+    },
+    "private": false,
+    "dependencies": {
+        "@craco/craco": "^6.4.5",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^13.5.0",
+        "antd": "^4.22.2",
+        "cesium": "^1.95.0",
+        "craco-cesium": "^1.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "5.0.1",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
+        "eject": "craco eject",
+        "publish:npm": "(if exist dist rmdir /s /q dist) && mkdir dist && babel ./src -d dist --copy-files",
+        "publish_linux:npm": "rm -rf dist && mkdir dist && babel ./src -d dist --copy-files"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.18.9",
+        "@babel/preset-react": "^7.18.6",
+        "babel-loader": "^8.2.5",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.1",
+        "react-styleguidist": "^11.2.0",
+        "style-loader": "^3.3.1"
+    }
 }
