--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
-        "antd": "^4.22.2",
-        "cesium": "^1.95.0",
+        "antd": "^4.23.1",
+        "cesium": "^1.96.0",
         "craco-cesium": "^1.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-draggable": "^4.4.5",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
@@ -70,6 +71,8 @@
         "babel-loader": "^8.2.5",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
+        "html-webpack-plugin": "^5.5.0",
+        "html-webpack-tags-plugin": "^3.0.2",
         "react-styleguidist": "^11.2.0",
         "style-loader": "^3.3.1"
     }
