--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "maps",
         "3d",
         "gis",
+        "cesium",
         "cesiumjs",
+        "openlayers",
+        "antd",
         "react"
     ],
     "author": "Paulo Aragao",
@@ -26,10 +29,12 @@
     },
     "private": false,
     "dependencies": {
-        "@craco/craco": "^6.4.5",
+        "@craco/craco": "^7.0.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "ag-grid-community": "^28.2.1",
+        "ag-grid-react": "^28.2.1",
         "antd": "^4.23.1",
         "cesium": "^1.96.0",
         "craco-cesium": "^1.2.0",
@@ -69,12 +74,16 @@
     "devDependencies": {
         "@babel/cli": "^7.18.9",
         "@babel/preset-react": "^7.18.6",
-        "babel-loader": "^8.2.5",
+        "babel-loader": "^9.1.0",
+        "browserify-zlib": "^0.2.0",
         "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
         "html-webpack-plugin": "^5.5.0",
         "html-webpack-tags-plugin": "^3.0.2",
-        "react-styleguidist": "^11.2.0",
+        "https-browserify": "^1.0.0",
+        "react-styleguidist": "11.2.0",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
         "style-loader": "^3.3.1"
     }
 }
