--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mapuiexts/react-cesiumext",
     "homepage": "https://mapuiexts.github.io/react-cesiumext.github.io/en/v0.1/apidoc",
-    "version": "0.1.0",
+    "version": "0.1.2",
     "description": "A react library to build 3d map applications with cesiumjs",
     "keywords": [
         "maps",
@@ -85,5 +85,9 @@
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "style-loader": "^3.3.1"
+    },
+    "peerDependencies": {
+        "react": ">=17.0.0",
+        "react-dom": ">=17.0.0"
     }
 }
