--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mapuiexts/react-cesiumext",
     "homepage": "https://mapuiexts.github.io/react-cesiumext.github.io/en/v0.1/apidoc",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "A react library to build 3d map applications with cesiumjs",
     "keywords": [
         "maps",
@@ -13,7 +13,7 @@
         "antd",
         "react"
     ],
-    "author": "Paulo Aragao",
+    "author": "Paulo Aragao <https://www.linkedin.com/in/pssargao>",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/mapuiexts/React-CesiumExt/issues"
@@ -30,17 +30,15 @@
     "private": false,
     "dependencies": {
         "@craco/craco": "^7.0.0",
+        "@mapuiexts/craco-cesiumext": "^0.1.0",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
-        "ag-grid-community": "^28.2.1",
-        "ag-grid-react": "^28.2.1",
+        "ag-grid-community": "^29.3.0",
+        "ag-grid-react": "^29.3.0",
         "antd": "^4.23.1",
         "cesium": "^1.96.0",
-        "craco-cesium": "^1.2.0",
         "ol": "^7.1.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "react-draggable": "^4.4.5",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
@@ -74,14 +72,14 @@
     "devDependencies": {
         "@babel/cli": "^7.18.9",
         "@babel/preset-react": "^7.18.6",
-        "babel-loader": "^9.1.0",
         "browserify-zlib": "^0.2.0",
-        "copy-webpack-plugin": "^11.0.0",
         "css-loader": "^6.7.1",
-        "html-webpack-plugin": "^5.5.0",
+        "html-webpack-plugin": "^5.5.1",
         "html-webpack-tags-plugin": "^3.0.2",
         "https-browserify": "^1.0.0",
-        "react-styleguidist": "11.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-styleguidist": "^13.1.1",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "style-loader": "^3.3.1"
