--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mapuiexts/react-cesiumext",
     "homepage": "https://mapuiexts.github.io/react-cesiumext.github.io/en/v0.1/apidoc",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "description": "A react library to build 3d map applications with cesiumjs",
     "keywords": [
         "maps",
@@ -34,10 +34,9 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
-        "ag-grid-community": "^29.3.0",
-        "ag-grid-react": "^29.3.0",
-        "antd": "^5.4.3",
-        "cesium": "^1.96.0",
+        "ag-grid-community": "^29.3.5",
+        "ag-grid-react": "^29.3.5",
+        "antd": "^5.5.0",
         "ol": "^7.1.0",
         "react-draggable": "^4.4.5",
         "react-scripts": "5.0.1",
@@ -70,9 +69,10 @@
         ]
     },
     "devDependencies": {
-        "@babel/cli": "^7.18.9",
+        "@babel/cli": "^7.21.5",
         "@babel/preset-react": "^7.18.6",
         "browserify-zlib": "^0.2.0",
+        "cesium": "^1.105.2",
         "css-loader": "^6.7.1",
         "html-webpack-plugin": "^5.5.1",
         "html-webpack-tags-plugin": "^3.0.2",
@@ -85,6 +85,7 @@
         "style-loader": "^3.3.1"
     },
     "peerDependencies": {
+        "cesium": ">=1.96.0",
         "react": ">=17.0.0",
         "react-dom": ">=17.0.0"
     }
